--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ section{
     width: 240px;
     height: 360px;
     margin: 100px 0;
+    user-select: none;
     display: grid;
     grid-template-columns: repeat(4, 60px);
     grid-template-rows: repeat(6, 60px);
